Created login/register template file

--- a/meme_space/src/Components/Form.css
+++ b/meme_space/src/Components/Form.css
@@ -1,5 +1,5 @@
 #login_form, #register_form{
-    width: 50%;
-    text-align:left;
+    /* width: 50%; */
+    /* text-align:left; */
     padding: 1rem;
 }
