--- a/client/src/Components/Templates/Templates.css
+++ b/client/src/Components/Templates/Templates.css
@@ -44,3 +44,9 @@
 .is-invalid:focus{
     box-shadow: 0 0 0 0.2rem rgb(220 53 69 / 25%) !important
 }
+
+#mainBox {
+    column-count: 3;
+    column-gap: 0px;
+    font-size: 18px;
+}
