--- a/client/src/Components/Templates/Post/PostTemplate.css
+++ b/client/src/Components/Templates/Post/PostTemplate.css
@@ -13,10 +13,11 @@
 a.comment-author{
     color: #4d4d4d;
     font-weight: 700 !important;
-    &:hover{
-        text-decoration: none !important;
-        color: #0077b3 !important;
-    }
+}
+
+a.comment-author:hover{
+    text-decoration: none !important;
+    color: #0077b3 !important;
 }
 
 .comment-date{
@@ -32,10 +33,11 @@ a.comment-author{
     padding: 1.2rem 0.75rem !important;
     border: 0px !important;
     border-bottom: 1px solid #ced4da !important;
-    &:focus{
-        border-bottom: #777f85 2px solid !important;
-        box-shadow: none !important;
-    }
+}
+
+.commentInput:focus{
+    border-bottom: #777f85 2px solid !important;
+    box-shadow: none !important;
 }
 
 .btn-group-sm>.btn, .btn-sm{
@@ -51,8 +53,9 @@ a.comment-author{
     text-decoration: none;
     color: black;
     font-size: 20px;
-    &:hover{
-        color:#0077b3;
-        text-decoration: none;
-    }
+}
+
+.card_post_author:hover{
+    color:#0077b3;
+    text-decoration: none;
 }
